{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 117,
  "lineage": "b1f63396-b717-0fd5-a954-cc11b6ef8b6a",
  "resources": [
    {
      "module": "module.shared_vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704999676864:network-acl/acl-0532b0b6c0f6e182e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0532b0b6c0f6e182e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "704999676864",
            "subnet_ids": [
              "subnet-01fb3e08be528b30b",
              "subnet-030d04fe9553ea95c",
              "subnet-093587d7a5e9a72fa",
              "subnet-0c5fd1f7133353ce6"
            ],
            "tags": {
              "Name": "private_nacl"
            },
            "tags_all": {
              "Name": "private_nacl"
            },
            "vpc_id": "vpc-0382700202a5eed43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.shared_vpc.aws_vpc.shared_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared_vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704999676864:network-acl/acl-0eea62fff55a44c13",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0eea62fff55a44c13",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "704999676864",
            "subnet_ids": [
              "subnet-0579361a119106e1b",
              "subnet-084ee350d15d41048",
              "subnet-0b3e4500b1a706207"
            ],
            "tags": {
              "Name": "public_nacl"
            },
            "tags_all": {
              "Name": "public_nacl"
            },
            "vpc_id": "vpc-0382700202a5eed43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.shared_vpc.aws_vpc.shared_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704999676864:route-table/rtb-034133582c93adafa",
            "id": "rtb-034133582c93adafa",
            "owner_id": "704999676864",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0382700202a5eed43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.shared_vpc.aws_vpc.shared_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704999676864:route-table/rtb-04d724c6de84f0316",
            "id": "rtb-04d724c6de84f0316",
            "owner_id": "704999676864",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0382700202a5eed43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.shared_vpc.aws_vpc.shared_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shared_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704999676864:vpc/vpc-0382700202a5eed43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0842e68552bb387c4",
            "default_route_table_id": "rtb-0f04c45e5607a5cd8",
            "default_security_group_id": "sg-08d55929ce4986ce8",
            "dhcp_options_id": "dopt-62ac0818",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0382700202a5eed43",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f04c45e5607a5cd8",
            "owner_id": "704999676864",
            "tags": {
              "Name": "shared-vpc"
            },
            "tags_all": {
              "Name": "shared-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "nacl_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0a362a0c942efa08b",
            "network_acl_id": "acl-0eea62fff55a44c13",
            "subnet_id": "subnet-0579361a119106e1b"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_subnet.subnets",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-09013a6876f27e666",
            "network_acl_id": "acl-0eea62fff55a44c13",
            "subnet_id": "subnet-084ee350d15d41048"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_subnet.subnets",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-05313f28160191659",
            "network_acl_id": "acl-0eea62fff55a44c13",
            "subnet_id": "subnet-0b3e4500b1a706207"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_subnet.subnets",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0ff03b56f40d8f83d",
            "network_acl_id": "acl-0532b0b6c0f6e182e",
            "subnet_id": "subnet-01fb3e08be528b30b"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_subnet.subnets",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0d62cd78fd94a1bee",
            "network_acl_id": "acl-0532b0b6c0f6e182e",
            "subnet_id": "subnet-030d04fe9553ea95c"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_subnet.subnets",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0d2f3df9bd7435a52",
            "network_acl_id": "acl-0532b0b6c0f6e182e",
            "subnet_id": "subnet-093587d7a5e9a72fa"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_subnet.subnets",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad36e45a11d0b83a",
            "route_table_id": "rtb-04d724c6de84f0316",
            "subnet_id": "subnet-0579361a119106e1b"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_subnet.subnets",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b892e9943fe517a",
            "route_table_id": "rtb-04d724c6de84f0316",
            "subnet_id": "subnet-084ee350d15d41048"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_subnet.subnets",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038c535b1b67ee2f4",
            "route_table_id": "rtb-04d724c6de84f0316",
            "subnet_id": "subnet-0b3e4500b1a706207"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_subnet.subnets",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096f6bfe36313f05b",
            "route_table_id": "rtb-034133582c93adafa",
            "subnet_id": "subnet-01fb3e08be528b30b"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_subnet.subnets",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c00665cf0fadc5f1",
            "route_table_id": "rtb-034133582c93adafa",
            "subnet_id": "subnet-030d04fe9553ea95c"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_subnet.subnets",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b09f0d5768f75a54",
            "route_table_id": "rtb-034133582c93adafa",
            "subnet_id": "subnet-093587d7a5e9a72fa"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_subnet.subnets",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704999676864:subnet/subnet-0579361a119106e1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0579361a119106e1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704999676864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-az1"
            },
            "tags_all": {
              "Name": "public-subnet-az1"
            },
            "vpc_id": "vpc-0382700202a5eed43"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704999676864:subnet/subnet-084ee350d15d41048",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084ee350d15d41048",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704999676864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-az2"
            },
            "tags_all": {
              "Name": "public-subnet-az2"
            },
            "vpc_id": "vpc-0382700202a5eed43"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704999676864:subnet/subnet-0b3e4500b1a706207",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3e4500b1a706207",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704999676864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-az3"
            },
            "tags_all": {
              "Name": "public-subnet-az3"
            },
            "vpc_id": "vpc-0382700202a5eed43"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704999676864:subnet/subnet-01fb3e08be528b30b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fb3e08be528b30b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704999676864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-az1"
            },
            "tags_all": {
              "Name": "private-subnet-az1"
            },
            "vpc_id": "vpc-0382700202a5eed43"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704999676864:subnet/subnet-030d04fe9553ea95c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030d04fe9553ea95c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704999676864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-az2"
            },
            "tags_all": {
              "Name": "private-subnet-az2"
            },
            "vpc_id": "vpc-0382700202a5eed43"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704999676864:subnet/subnet-093587d7a5e9a72fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093587d7a5e9a72fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704999676864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-az3"
            },
            "tags_all": {
              "Name": "private-subnet-az3"
            },
            "vpc_id": "vpc-0382700202a5eed43"
          },
          "dependencies": [
            "module.shared_vpc.aws_network_acl.private_nacl",
            "module.shared_vpc.aws_network_acl.public_nacl",
            "module.shared_vpc.aws_route_table.private_route_table",
            "module.shared_vpc.aws_route_table.public_route_table",
            "module.shared_vpc.aws_vpc.shared_vpc",
            "module.subnets.aws_vpc_ipam_pool_cidr_allocation.cidr_allocations"
          ]
        }
      ]
    }
  ]
}